--- a/SharpLexer/SharpLexer.csproj
+++ b/SharpLexer/SharpLexer.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Exceptions.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="NFAMachine.cs" />
+    <Compile Include="Scanner.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
